# RHYTHMY

./: .gitignore  CHECKLIST.md  CMakeLists.txt  LICENSE  README.md  RELEASING.md  TEST_CHECKLIST.md  build_aarch64.sh  build_bootlin.sh  build_linux.sh  install_sdl_sysroot.sh  launch_debug.sh  launch_debug2.sh  launch_debug3.sh  setup_bootlin.sh  setup_wsl.ps1  setup_wsl_focal.sh  setup_wsl_jammy.sh
.github/workflows/: ci.yml  release.yml
cmake/: toolchain-r36s-aarch64-sysroot.cmake  toolchain-r36s-aarch64.cmake  toolchain-r36s-bootlin.cmake  toolchain-r36s.cmake
packaging/: installer_header.sh  make_installer.sh
src/: App.cpp  App.hpp  ContextMenu.cpp  ContextMenu.hpp  ControlsScreen.cpp  ControlsScreen.hpp  Dialogs.cpp  Dialogs.hpp  Font.cpp  Font.hpp  FxEditor.cpp  FxEditor.hpp  HintBar.cpp  HintBar.hpp  Input.cpp  Input.hpp  SDLCompat.hpp  Screen.hpp  TextureLoader.cpp  TextureLoader.hpp  UI.hpp  main.cpp
src/audio/: Analysis.cpp  Analysis.hpp  AudioEngine.cpp  AudioEngine.hpp  DrumFavorites.cpp  DrumFavorites.hpp  DrumSynth.cpp  DrumSynth.hpp  Effects.cpp  Effects.hpp  SampleBank.cpp  SampleBank.hpp
src/data/: Project.hpp  ProjectIO.cpp  ProjectIO.hpp  Scales.hpp
src/screens/: ChannelRack.cpp  ChannelRack.hpp  Mixer.cpp  Mixer.hpp  PianoRoll.cpp  PianoRoll.hpp  Playlist.cpp  Playlist.hpp  PresetBrowser.cpp  PresetBrowser.hpp  SampleScreen.cpp  SampleScreen.hpp  SynthScreen.cpp  SynthScreen.hpp
